plugins {
  id 'nebula.release' version '6.1.0'
}
//apply plugin: 'nebula.integtest-standalone'
apply plugin: 'java-library'
apply plugin: 'maven-publish'
apply plugin: 'application'

apply plugin: 'project-report'
htmlDependencyReport {
  projects = project.allprojects
}

mainClassName = "com.threerings.getdown.launcher.Getdown"

jar {
  manifest {Application
    attributes 'Main-Class': 'com.threerings.getdown.launcher.Getdown',
            'Specification-Version': "${version}",
            'Component-Version': "${version}",
            'Implementation-Version': "${version}",
            'Specification-Title': 'getdown-sse'
  }

  doFirst {
    manifest {
      attributes(
              'Class-Path': configurations.runtimeClasspath.collect { it.getName() }.join(' '),
      )
    }
  }
}

tasks.release.dependsOn tasks.build
tasks.postRelease.finalizedBy tasks.publish

repositories {
  mavenCentral()
}

dependencies {
  implementation group: 'com.samskivert', name: 'samskivert', version: '1.9'
  implementation group: 'net.java.dev.jna', name: 'jna-platform', version: '5.3.1'

  testImplementation group: 'junit', name: 'junit', version: '4.12'
}

sourceCompatibility = 1.8
targetCompatibility = 1.8

task sourceJar(type: Jar) {
  from sourceSets.main.allJava
}

publishing {
  publications {
    jar(MavenPublication) {
      from components.java
    
      artifact sourceJar {
        classifier "sources"
      }
    }
    
    zip(MavenPublication) {
      artifactId project.name + "-dist-zip"
      artifact distZip {
        classifier ""
      }
    }
  
    tar(MavenPublication) {
      artifactId project.name + "-dist-tar"
      artifact distTar {
        classifier ""
      }
    }
  }
}

publishing {
  repositories {
    maven {
      credentials {
        username project.properties["nexus_username"]
        password project.properties["nexus_password"]
      }
      url project.properties["maven_url"]
    }
  }
}
